# whiskitphysics

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
code/: CMakeLists.txt
code/bulletlib/: CMakeLists.txt  LICENSE.txt  README.md
code/bulletlib/Extras/: Makefile  cmake_install.cmake
code/bulletlib/Extras/BulletRobotics/: Makefile  cmake_install.cmake
code/bulletlib/Extras/ConvexDecomposition/: Makefile
code/bulletlib/Extras/GIMPACTUtils/: Makefile
code/bulletlib/Extras/HACD/: Makefile  cmake_install.cmake
code/bulletlib/Extras/InverseDynamics/: Makefile
code/bulletlib/Extras/Serialize/: Makefile  cmake_install.cmake
code/bulletlib/Extras/obj2sdf/: cmake_install.cmake
code/bulletlib/examples/: CMakeLists.txt  cmake_install.cmake
code/bulletlib/examples/BasicDemo/: Makefile
code/bulletlib/examples/ExampleBrowser/: CMakeLists.txt  GL_ShapeDrawer.cpp  Makefile  cmake_install.cmake
code/bulletlib/examples/HelloWorld/: Makefile  cmake_install.cmake
code/bulletlib/examples/OpenGLWindow/: Makefile  OpenGL2Include.h  OpenGLInclude.h  SimpleOpenGL2App.cpp  SimpleOpenGL3App.cpp  cmake_install.cmake
code/bulletlib/examples/RobotSimulator/: App_RobotSimulator  Makefile
code/bulletlib/examples/SharedMemory/: App_PhysicsServer_SharedMemory  Makefile
code/bulletlib/examples/TwoJoint/: App_TwoJoint  Makefile  cmake_install.cmake
code/bulletlib/src/: CMakeLists.txt  Makefile  btBulletCollisionCommon.h  btBulletDynamicsCommon.h  cmake_install.cmake
code/bulletlib/src/Bullet3Collision/: Makefile  cmake_install.cmake
code/bulletlib/src/Bullet3Geometry/: Makefile  cmake_install.cmake
code/bulletlib/src/Bullet3OpenCL/: cmake_install.cmake
code/bulletlib/src/BulletCollision/: CMakeLists.txt  Makefile
code/bulletlib/src/BulletDynamics/: CMakeLists.txt  Makefile  cmake_install.cmake
code/bulletlib/src/BulletInverseDynamics/: Makefile
code/bulletlib/src/BulletSoftBody/: cmake_install.cmake
code/bulletlib/src/LinearMath/: Makefile  btIDebugDraw.h  cmake_install.cmake
code/data/: .~lock.param_name.csv#  .~lock.param_name_30.csv#  param_angles.csv  param_angles_30.csv  param_bp_angles.csv  param_bp_angles_30.csv  param_bp_pos.csv  param_bp_pos_30.csv  param_name.csv  param_name_30.csv  param_s_a.csv  param_s_a_b_30.csv  param_side_row_col.csv  whisking_init_angle_sample.csv  whisking_trajectory_average.csv  whisking_trajectory_model.csv  whisking_trajectory_sample.csv
code/data/environment/: convex_wall_100_orignal.ply
code/data/old/: param_angles_old.csv  param_s_a_rand_old.csv
code/data/param_behavioral/whisker_param_average_rat/: param_s_a.csv  whisking_init_angle.csv
code/data/param_sinusoidal/whisker_param_average_rat/: whisking_init_angle.csv
code/data/param_sinusoidal/whisker_param_model_rat/: param_bp_pos.csv  param_s_a.csv  whisking_init_angle.csv
code/data/whisker_param_average_rat/: param_angles.csv  param_bp_pos.csv  param_name.csv  whisking_init_angle.csv  whisking_trajectory.csv
code/data/whisker_param_average_rat (copy)/: param_bp_angles.csv  param_side_row_col.csv
code/data/whisker_param_model_rat/: param_angles.csv  param_bp_angles.csv  param_bp_pos.csv  param_name.csv  param_s_a.csv  whisking_init_angle.csv  whisking_trajectory.csv  whisking_trajectory_15-40-8.csv
code/data/whisker_param_model_rat (copy)/: param_angles.csv
code/include/: GraphicsApp.h  LoadObj.h  Object copy.h  Object.h  Object.hpp  Object_2.h  Parameters.h  Parameters.hpp  Rat.h  Rat.hpp  Simulation.h  Simulation.hpp  Simulation_IO.h  Simulation_IO.hpp  Simulation_utility.h  Simulation_utility.hpp  Whisker.h  Whisker.hpp  Whisker_utility.hpp
code/matlab/: load_path.m
code/matlab/Admir_Traj1_free_air/: csv_readme.txt  h5_to_csv.ipynb  head_front.csv  head_left.csv  head_top.csv  reconstruct3D.m
code/matlab/Admir_Traj1_free_air/exampleTrial_Yifu/: README.txt  (+2 more)
code/matlab/AnimalMap_Library/: EulerRotateWhisker.m  EulerRotateWhisker2.m  MNnFS.m  Whiteley.m  acoeff2cart.m  acoeff2cart_poly3.m  add2DWhisker.m  alignBasepoints.m  alignWhiskers.m  arclength.m  colorblind.m  equidist.m  equidist3d.m  equidistlen3d.m  expIndex.m  findWHindex.m  fit2DWhisker.m  fit3DPlane.m  fit3DWhiskerE.m  fit_3D_data.m  getBpAngles.m  getCircle.m  getProjAngles.m  getRowColInfo.m  letter2num.m  match.m  matchBP.m  matchBPWH.m  matchBP_old.m  matchBasePoints.m  matchBasePointsLR.m  mirrorX.m  normr.m  overlap.m  parseWhiskerID.m  rot2.m  shiftOrigin.m  splitBasePointsLR.m  stdOrientation2D.m  svd_fit.m  (+4 more)
code/matlab/Whisking_Knutsen/: W1_whisking_phase_look_up.m  W2_phase2velocity.m  angles_in_whisking_[-60,60].mat  compare_trajectory.m  compare_trajectory.m~  pathdef.m  test.m  whisker_vel.csv
code/matlab/Whisking_Knutsen/for_yifu_from_Kevin/: phase.mat  (+2 more)
code/matlab/for_demo/: loc_vel_kevin_2.csv  path2vel_Euler.m  raw_from_Kevin.csv  raw_from_kevin_2.csv
code/scripts/: run_env_active.sh  run_env_active_8x.sh  run_noncontact_active.sh  run_peg.sh  run_peg_1x.sh  run_peg_8x.sh  run_peg_active.sh  run_peg_active_8x.sh  run_peg_dist.sh  run_peg_passive.sh  run_peg_passive_1x.sh  run_peg_passive_8x.sh  run_wall.sh  run_wall_active.sh  test_array_and_whisking.m
code/scripts/__old/: filename  run_convex_concave.sh  run_convex_concave_exp.sh  run_mesh.sh  run_wall_concave.sh
code/scripts/compute_parameters/: Copy_of_compute_parameters.m  acoeff2cart.m  compute_parameters.asv  compute_parameters.m  equidist.m  new_ratmap_data.xlsx  write_whisker_param.m
code/scripts/generate_whisk/: Copy_of_generate_whisk_average_rat.m  Copy_of_generate_whisk_model_rat.m  convert_whisk_average_rat.m  generate_whisk_average_rat.asv  generate_whisk_average_rat.m  generate_whisk_model_rat.asv  generate_whisk_model_rat.m  roty.m  rotz.m  whisk_average_log.txt  whisk_model_log.txt
code/scripts/plot_signals/: plot_signals.py
code/src/: GraphicsApp.cpp  LoadObj.cpp  Object.cpp  Object_2.cpp  Parameters.cpp  Rat.cpp  Simulation.cpp  Simulation_IO.cpp  Simulation_utility.cpp  Whisker.cpp  main.cpp  main_opengl.cpp
code/test/matlab/: pathdef.m  traj_planner.m
(+369 files in other folders)
